Refactorization of Daos, Services and Facades to improve database transactions